# project/controller.py
@@ -1,6 +1,7 @@
 from fastapi import APIRouter
-from project.services import *
+from project.services.services import *
 from project.schemas import *
+from project.services.email_service import send_email
 
 router = APIRouter()
 
@@ -33,6 +34,10 @@ async def update_checkbox(data: UpdateRequest):
     else:
         await updateChecked(data)
         return {"message": "Updated checkbox"}
+
+@router.put("/send-email")
+def sendEmail(email_data: SendEmail):
+    return send_email(email_data)
 
 # Disconnect database
 @router.on_event("shutdown")
