# project/schemas.py
@@ -5,4 +5,8 @@ class DeleteRequest(BaseModel):
     task_id: int
 class UpdateRequest(BaseModel):
     task_id: int
-    update: bool
+    is_done: bool
+class SendEmail(BaseModel):
+    subject: str
+    body: str
+    to_email: str
